# pytest_selenium_restApi

./: .gitignore  README.md  pyproject.toml  requirements.txt
ignore/alfa/: .gitignore  LICENSE
ignore/alfa/tests/test_api/test_rest/: conftest.py
ignore/alfa/tests/test_ui/: test_01.py
ignore/alfa/tests/test_ui/service/: locators.py
ignore/archive/step2/: config.yaml
ignore/archive/step3/: log.txt  pyproject.toml
ignore/archive/step3/page_object/: BaseApp.py  conftest.py
ignore/final/selenium_t/: log.txt  send_email_report.py
ignore/final/selenium_t/edgedriver/Driver_Notes/: LICENSE
ignore/final/selenium_t/page_object/: BaseApp.py  conftest.py  locators.py  test_01.py  testpage.py
ignore/final/test_api/: config.yaml
ignore/final/test_api/test_rest/: conftest.py  request_rest.py  test_test-gb.py
ignore/final/test_api/test_soap/: check_text.py  conftest.py  test_yaspeller.py
selenium/: config.yaml
selenium_t/: config.yaml  log.txt  main.py  module.py
selenium_t/page_object/: test_01.py  testpage.py
selenium_t/test/: conftest.py  test_login_error.py
test_api/: conftest.py
test_api/test_rest/: config.yaml  test_test-gb.py  test_wiki_rest.py
test_api/test_soap/: check_text.py  test_soap_verf_signature.py
tests/test_api/: config.yaml  conftest.py
tests/test_api/test_rest/: test_test-gb.py
tests/test_ui/: conftest.py
tests/test_ui/service/: BaseApp.py  config.yaml  locators.yaml  testpage.py
