[tool.poetry]
name = "pytest-notes"
version = "0.1.0"
description = ""
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
zeep = "^4.2.1"
pytest = "^8.3.2"
pyyaml = "^6.0.2"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '-vv -s'
norecursedirs = 'ignore'
markers = [
'rest', # test rest response
'ui', # test soap response
'exc', # exclude tests
]
log_file_format = '%(asctime)s %(levelname)s %(message)s'
log_file_date_format = '%Y-%m-%d %H:%M:%s'
log_file = 'tests/log.txt'
log_file_level = '20'